--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -60,7 +60,116 @@ html, body {
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
+.container{
+	width: 900px;
+	margin: 0 auto;
+}
+header nav {
+	display: inline-block;
+	width: 700px;
+	vertical-align: top;
+	margin-top: 30px;
+}
+
+header nav a {
+	margin-right: 60px;
+	font-size: 18px;
+	color: grey;
+	text-decoration: none;
+}
+
+header nav a:hover{
+	text-decoration: underline;
+}
+
+header nav a:first-child {
+	margin-left: 0;
+}
+
+header nav a:last-child {
+	margin-right: 0;
+}
+header .logo {
+	margin-top: 30px;
+	align-content: horizontal;
+}
+
+.gateway .gateway-text {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 55px;
+	margin-top: 100px;
+	text-align: center;
+	padding: 0px 75px;
+}
+
+.gateway .gateway-text button {
+	background: white;
+	vertical-align: top;
+	margin-top: 8px;
+	padding: 8px 50px;
+	font-size: 18px;
+	border: 3px solid black;
+	cursor: pointer;
+}
+.gateway .gateway-text button:hover {
+	background: blue;
+	color: yellow;
+}
+.gateway img {
+	display: inline-block;
+	margin-top: 59px;
+}
+
+.mainpage-content {
+	border-top: 2px solid black;
+	margin-top: 56px;
+	padding-top: 30px;
+}
+.mainpage-content .mid-content{
+	padding: 5px 15px;
+}
+
+.mainpage-content .mid-content .text-content {
+	width: 400px;
+	display: inline-block;
+	margin-right: 15px;
+}
+.mainpage-content .middle-img {
+	margin-top: 40px;
+}
+.mainpage-content .lowermid-content {
+	margin-top: 20px;
+	padding: 0 5px;
+}
+
+.mainpage-content .lowermid-content .text-content {
+	width: 270px;
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.mainpage-content .lowermid-content .text-content:last-child {
+margin-right: 0;
+}
+
+.bottom-contact {
+	margin-top: 57px;
+	border-top: 3px solid blue;
+	padding: 39px 10px 0;
+}
+.bottom-contact p {
+	margin: 25px 0;
+}
+footer {
+	margin: 32px 0;
+	text-align: center;
+	font-size: 12px;
+}
+
+
+
 
 /* Your code starts here! */
